[package]
name = "attractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorgrad = "0.6.2"
image = "0.24.5"
ndarray = "0.15.6"
# ndarray-rand = "0.14.0"
# ndarray-stats = "0.5.1"
stats-cli = "3.0.1"

[profile.dev.package.ndarray]
opt-level = 3

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3
